# CaseCellShop

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  cart.py  order.py  product.py  reservation.py
backend/app/routers/: cart.py  orders.py  products.py
backend/app/schemas/: cart.py  order.py  product.py
backend/app/services/: cart_service.py  erp_service.py  erp_sync.py  order_service.py  reservation_cleanup.py  stock_service.py
backend/tests/: conftest.py
backend/tests/concurrent/: test_race_conditions.py
backend/tests/unit/: test_cart.py  test_erp_service.py  test_orders.py  test_products.py  test_stock_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: cart.ts  client.ts  orders.ts  products.ts
frontend/src/components/: CartItem.tsx  ErrorBanner.tsx  LoadingSpinner.tsx  Navbar.tsx  ProductCard.tsx  StockBadge.tsx
frontend/src/hooks/: useCart.ts  useCheckout.ts  useProducts.ts  useSession.ts
frontend/src/pages/: CartPage.tsx  CheckoutPage.tsx  ProductListPage.tsx
frontend/src/types/: index.ts
